--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 
 [dependencies]
 anyhow = "1.0" # Error trait and generalized error handling
+itertools = "0.10.0"
+rand = "0.8.3"
+rand_distr = "0.4.0"
 structopt = { version = "0.3", features = [ "paw" ] } # Command-line argument parsing
 paw = "1.0" # Command-line argument parsing
 
