--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ structopt = { version = "0.3", features = [ "paw" ] } # Command-line argument pa
 paw = "1.0" # Command-line argument parsing
 
 [[bench]]
+name = "lagrange_interpolation_slow"
+harness = false
+
+[[bench]]
 name = "ntt"
 harness = false
 
