--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["sword_smith <thorkilk@gmail.me>"]
 edition = "2018"
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = "0.3.4"
 
 [dev-dependencies.cargo-husky]
 version = "1"
@@ -16,12 +16,14 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 anyhow = "1.0" # Error trait and generalized error handling
 bincode = "1.3.3" # A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!
 blake3 = "0.3.8"
+byteorder = "1.4.3"
 itertools = "0.10.0"
 num-traits = "0.2.14"
 rand = "0.8.3" # random number generation (used for benchmarking NTT and FTT)
 rand_distr = "0.4.0"
 ring       = "0.16.20"
-serde = "1.0.126"
+serde = { version = "1.0.126", features = ["derive"] }
+# serde = { version = "1.0", features = ["derive"] }
 structopt = { version = "0.3", features = [ "paw" ] } # Command-line argument parsing
 paw = "1.0" # Command-line argument parsing
 
