--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ anyhow = "1.0" # Error trait and generalized error handling
 bincode = "1.3.3" # A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!
 blake3 = "0.3.8"
 byteorder = "1.4.3"
-itertools = "0.10.0"
+num-bigint = { version = "0.4.0", features = ["serde"] }
 num-traits = "0.2.14"
+itertools = "0.10.0"
 rand = "0.8.3" # random number generation (used for benchmarking NTT and FTT)
 rand_distr = "0.4.0"
 ring       = "0.16.20"
