--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ num-traits = "0.2.14"
 itertools = "0.10.0"
 rand = "0.8.3" # random number generation (used for benchmarking NTT and FTT)
 rand_distr = "0.4.0"
+rand_pcg = "0.3"
 ring       = "0.16.20"
 serde = { version = "1.0.126", features = ["derive"] }
 # serde = { version = "1.0", features = ["derive"] }
