Add benchmark for NTT in the B-Field
Co-authored-by: Simon Shine <simon@neptune.cash>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,10 @@ name = "ntt"
 harness = false
 
 [[bench]]
+name = "ntt_bfield"
+harness = false
+
+[[bench]]
 name = "rpsss_bench_sign"
 harness = false
 
