Add rescue_prime_air_constraints benchmark: steps_count = 1, alpha = 4
This runs considerably faster than with steps_count = 7, alpha = 7, but
the increased speed of the benchmark is useful when measuring
improvements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,10 @@ harness = false
 name = "rpsss_bench_verify"
 harness = false
 
+[[bench]]
+name = "rescue_prime_air_constraints"
+harness = false
+
 [profile.dev]
 opt-level = 0
 debug = true
