--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rand_distr = "0.4"
 rand_pcg = "0.3"
 ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 structopt = { version = "0.3", features = ["paw"] }
 
 [[bench]]
