--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,10 @@ name = "integer_interpolation"
 harness = false
 
 [[bench]]
+name = "polynomial_square"
+harness = false
+
+[[bench]]
 name = "ntt"
 harness = false
 
