--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 paw = "1.0"
 phf = { version = "0.10", features = ["macros"] }
+parity-scale-codec = "2"
+primitive-types = "0.10"
 rand = "0.8"
 rand_distr = "0.4"
 rand_pcg = "0.3"
