--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ primitive-types = { version = "0.10", features = ["serde"] }
 rand = "0.8"
 rand_distr = "0.4"
 rand_pcg = "0.3"
+rayon = "1.5"
 ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
