--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ num-traits = "0.2"
 parity-scale-codec = "2"
 paw = "1.0"
 phf = { version = "0.10", features = ["macros"] }
-primitive-types = "0.10"
+primitive-types = { version = "0.10", features = ["serde"] }
 rand = "0.8"
 rand_distr = "0.4"
 rand_pcg = "0.3"
