--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bincode = "1.3"
 blake3 = "1.2"
 byteorder = "1.4"
 itertools = "0.10"
+hashbrown = "0.12"
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 parity-scale-codec = "2"
