--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,14 +42,11 @@ harness = false
 [[bench]]
 name = "ntt_forward"
 harness = false
+# [[bench]]# name = "rpsss_bench_sign"# harness = false
 
-[[bench]]
-name = "rpsss_bench_sign"
-harness = false
-
-[[bench]]
-name = "rpsss_bench_verify"
-harness = false
+# [[bench]]
+# name = "rpsss_bench_verify"
+# harness = false
 
 [[bench]]
 name = "rescue_prime_air_constraints"
