--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0"
 bincode = "1.3"
 blake3 = "1.2"
 byteorder = "1.4"
+console = "0"
 hashbrown = "0.12"
 itertools = "0.10"
 num-bigint = { version = "0.4", features = ["serde"] }
