--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = { version = "0.3", features = ["paw"] }
+nom = "7.1"
 
 [[bench]]
 name = "polynomial_square"
