--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,11 @@ harness = false
 [[bench]]
 name = "ntt_forward"
 harness = false
-# [[bench]]# name = "rpsss_bench_sign"# harness = false
+
+# [[bench]]
+# name = "rpsss_bench_sign"
+# harness = false
+
 # [[bench]]
 # name = "rpsss_bench_verify"
 # harness = false
