--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,10 @@ bincode = "1.3"
 blake3 = "1.2"
 byteorder = "1.4"
 console = "0"
+colored = "2.0"
 hashbrown = "0.12"
 itertools = "0.10"
+nom = "7.1"
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 parity-scale-codec = "3"
@@ -35,7 +37,6 @@ ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = { version = "0.3", features = ["paw"] }
-nom = "7.1"
 
 [[bench]]
 name = "polynomial_square"
