--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ name = "polynomial_square"
 harness = false
 
 [[bench]]
+name = "rescue_prime_wat"
+harness = false
+
+[[bench]]
 name = "stark_bf"
 harness = false
 
