--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ type: docker
 name: default
 
 steps:
-  - name: Step 1
+  - name: MainPipeline
     image: rust:1.60
     commands:
       - cargo check
