Add 'cargo bench stark_bf' to Drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -20,11 +20,10 @@ steps:
     commands:
       - cargo test
 
-        # Warning:  These takes 28 minutes to run
-        #  - name: Benchmarks
-        #    image: rust:1.60
-        #    commands:
-        #     - cargo bench stark_bf
+  - name: Bench
+    image: rust:1.60
+    commands:
+      - cargo bench stark_bf
 
 trigger:
   branch:
