--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ authors = ["sword_smith <thorkilk@gmail.me>"]
 edition = "2021"
 
 [dev-dependencies]
-criterion = "0.3"
 proptest = "1.0"
+
+[dev-dependencies.criterion]
+version = "0.3"
+features = ["html_reports"]
 
 [dev-dependencies.cargo-husky]
 version = "1"
@@ -68,6 +71,10 @@ harness = false
 
 [[bench]]
 name = "stark_rp"
+harness = false
+
+[[bench]]
+name = "inverse"
 harness = false
 
 [profile.dev]
