--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,4 @@ steps:
   - name: notify
     image: rust:1.60
     commands:
-      - curl --url 'smtp://mail.neptune.builders:25' --mail-from 'drone@mail.neptune.builders' --mail-rcpt 'simon@neptune.cash' -T <(echo -e 'From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\nHello')
-
-
+      - | curl --url 'smtp://mail.neptune.builders:25' --mail-from 'drone@mail.neptune.builders' --mail-rcpt 'simon@neptune.cash' -T <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\nHello")
