--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,15 @@ trigger:
     - master
 
 steps:
+  - name: notifystart
+    image: rust:1.60
+    commands:
+      - |
+        curl --url 'smtp://mail.neptune.builders:25' \
+             --mail-from 'drone@mail.neptune.builders' \
+             --mail-rcpt 'simon@neptune.cash' -T \
+             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\Build started..")
+
   - name: build
     image: rust:1.60
     commands:
@@ -20,11 +29,11 @@ steps:
     commands:
       - cargo bench stark_bf
 
-  - name: notify
+  - name: notifyend
     image: rust:1.60
     commands:
       - |
         curl --url 'smtp://mail.neptune.builders:25' \
              --mail-from 'drone@mail.neptune.builders' \
              --mail-rcpt 'simon@neptune.cash' -T \
-             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\nHello")
+             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\nBuild completed.")
