--- a/.drone.yml
+++ b/.drone.yml
@@ -12,10 +12,10 @@ steps:
     image: rust:1.60
     commands:
       - |
-        curl --url 'smtp://mail.neptune.builders:25' \
-             --mail-from 'drone@mail.neptune.builders' \
-             --mail-rcpt 'simon@neptune.cash' -T \
-             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\Build started..")
+        sh -c 'curl --url "smtp://mail.neptune.builders:25" \
+             --mail-from "drone@mail.neptune.builders" \
+             --mail-rcpt "simon@neptune.cash" -T \
+             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\Build started..")'
 
   - name: build
     image: rust:1.60
@@ -33,7 +33,7 @@ steps:
     image: rust:1.60
     commands:
       - |
-        curl --url 'smtp://mail.neptune.builders:25' \
-             --mail-from 'drone@mail.neptune.builders' \
-             --mail-rcpt 'simon@neptune.cash' -T \
-             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\nBuild completed.")
+        sh -c 'curl --url "smtp://mail.neptune.builders:25" \
+             --mail-from "drone@mail.neptune.builders" \
+             --mail-rcpt "simon@neptune.cash" -T \
+             <(echo -e "From: drone@mail.neptune.builders\nTo: simon@neptune.cash\nSubject: Curl Test\n\Build completed.")'
