Fix wrong file names in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@ rusty-tags.vi
 cmake-build-*/
 
 # Unwanted VS Code files
-./vscode/dryrun.log
-./vscode/targets.log
+.vscode/dryrun.log
+.vscode/targets.log
 
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
