--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,10 @@ rand_pcg = "0.3"
 rayon = "1.5"
 ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
+serde-big-array = "0"
+serde_derive = "1"
 serde_json = "1.0"
+serde_with = "1"
 structopt = { version = "0.3", features = ["paw"] }
 
 [[bench]]
