Reenable commits allowing for Telegram notifications.
For now `cargo clippy --all-targets` has been disabled.
See issue#124.

--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ steps:
     image: *latest_stable
     commands:
       - rustup component add clippy
-      - cargo clippy --all-targets
+      - cargo clippy  # --all-targets Reenable when issue #124 has been resolved
 
   - name: Build
     image: *latest_stable
