--- a/.drone.yml
+++ b/.drone.yml
@@ -52,41 +52,35 @@ steps:
     # failure: ignore
     depends_on:
       - Bench
-    # secrets: [telegram_to, telegram_token]
+    secrets: [telegram_token, telegram_to]
     when:
-      status: [failure, success]
-    settings:
-      to:
-        from_secret: telegram_to
-      token:
-        from_secret: telegram_token
-      format: markdown
-      # Reference:
-      # https://github.com/appleboy/drone-telegram/blob/master/DOCS.md#parameter-reference
-      message: >
-        {{#success build.status}}
-        ✅ Build #{{build.number}} of `{{repo.name}}` succeeded.
+      status: [success, failure]
+    format: markdown
+    # Reference:
+    # https://github.com/appleboy/drone-telegram/blob/master/DOCS.md#parameter-reference
+    message: >
+      {{#success build.status}}
+      ✅ Build #{{build.number}} of `{{repo.name}}` succeeded.
 
-        📝 Commit by {{commit.author}} on `{{commit.branch}}`:
+      📝 Commit by {{commit.author}} on `{{commit.branch}}`:
 
-        ```
-        {{commit.message}}
-        ```
-        🕐 Duration: {{duration build.started build.finished}}
+      ```
+      {{commit.message}}
+      ```
+      🕐 Duration: {{duration build.started build.finished}}
 
-        🌐 {{ build.link }}
-        {{else}}
-        ❌ Build #{{build.number}} of `{{repo.name}}` failed.
+      🌐 {{ build.link }}
+      {{else}}
+      ❌ Build #{{build.number}} of `{{repo.name}}` failed.
 
-        📝 Commit by {{commit.author}} on `{{commit.branch}}`:
+      📝 Commit by {{commit.author}} on `{{commit.branch}}`:
 
-        ```
-        {{commit.message}}
-        ```
+      ```
+      {{commit.message}}
+      ```
 
-
-        🌐 {{ build.link }}
-        {{/success}}
+      🌐 {{ build.link }}
+      {{/success}}
 
 
 trigger:
