--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "twenty-first"
 version = "0.1.0"
-authors = ["sword_smith <thorkilk@gmail.me>"]
+authors = ["Triton Software AG"]
 edition = "2021"
 
 [dev-dependencies]
