--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ rand_distr = "0.4"
 rand_pcg = "0.3"
 rayon = "1.5"
 ring = "0.16"
+rusty-leveldb = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0"
 serde_derive = "1"
