--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -66,6 +66,10 @@ name = "rescue_prime_xlix"
 harness = false
 
 [[bench]]
+name = "rescue_prime_regular"
+harness = false
+
+[[bench]]
 name = "stark_bf"
 harness = false
 
