--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -56,6 +56,7 @@ serde_derive = "1"
 serde_json = "1.0"
 serde_with = "1"
 structopt = { version = "0.3", features = ["paw"] }
+emojihash-rs = "0.2"
 
 [[bench]]
 name = "polynomial_square"
