--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["twenty-first", "stark-brainfuck"]
+members = ["twenty-first", "stark-brainfuck", "stark-rescue-prime"]
 
 [profile.dev]
 opt-level = 0
