--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -42,8 +42,7 @@ parity-scale-codec = "3"
 paw = "1.0"
 phf = { version = "0.10", features = ["macros"] }
 primitive-types = { version = "0.11", features = ["serde"] }
-rand = "0.8"
-rand_chacha = "0"
+rand = { version = "0.8", features = ["min_const_gen"] }
 rand_core = "0"
 rand_distr = "0.4"
 rand_pcg = "0.3"
