make clippy happy

--- a/twenty-first/clippy.toml
+++ b/twenty-first/clippy.toml
@@ -1,1 +1,1 @@
-blacklisted-names = ["foo", "bar", "foobar", "hm", "hmm", "hmmm", "hmmmm", "hmmmmm", "hmmmmmm"]
+disallowed-names = ["foo", "bar", "foobar", "hm", "hmm", "hmmm", "hmmmm", "hmmmmm", "hmmmmmm"]
