--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -73,6 +73,10 @@ name = "rescue_prime_regular"
 harness = false
 
 [[bench]]
+name = "tip5"
+harness = false
+
+[[bench]]
 name = "ntt_forward"
 harness = false
 
