--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -67,6 +67,10 @@ name = "rescue_prime_regular"
 harness = false
 
 [[bench]]
+name = "rescue_prime_regular_alternative"
+harness = false
+
+[[bench]]
 name = "ntt_forward"
 harness = false
 
