add benchmark for poseidon

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -77,6 +77,10 @@ name = "tip5"
 harness = false
 
 [[bench]]
+name = "poseidon"
+harness = false
+
+[[bench]]
 name = "ntt_forward"
 harness = false
 
