--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -54,7 +54,7 @@ rand_distr = "0.4"
 rand_pcg = "0.3"
 rayon = "1.5"
 ring = "0.16"
-rusty-leveldb = "1"
+rusty-leveldb = "^1.0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0"
 serde_derive = "1"
