add benchmark for Poseidon's naive implementation

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -78,6 +78,10 @@ name = "tip5"
 harness = false
 
 [[bench]]
+name = "poseidon_naive"
+harness = false
+
+[[bench]]
 name = "poseidon"
 harness = false
 
