--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -36,6 +36,7 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 anyhow = "1.0"
 bincode = "1.3"
 blake3 = "1.3.3"
+sha3 = "0.10"
 byteorder = "1.4"
 console = "0.15"
 colored = "2.0"
@@ -83,6 +84,14 @@ harness = false
 
 [[bench]]
 name = "poseidon"
+harness = false
+
+[[bench]]
+name = "sha3"
+harness = false
+
+[[bench]]
+name = "blake3"
 harness = false
 
 [[bench]]
