add benchmark verifying many partial Merkle tree authentication paths

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -101,3 +101,7 @@ harness = false
 [[bench]]
 name = "merkle_tree"
 harness = false
+
+[[bench]]
+name = "merkle_tree_authenticate"
+harness = false
