make overflowing additions, subtractions, and multiplications explicit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ rpath = false
 opt-level = 0
 debug = true
 debug-assertions = true
-overflow-checks = false
+overflow-checks = true
 lto = false
 incremental = true
 codegen-units = 256
