--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -11,13 +11,7 @@ documentation = "https://github.com/Neptune-Crypto/twenty-first"
 repository = "https://github.com/Neptune-Crypto/twenty-first"
 readme = "../README.md"
 
-keywords = [
-    "polynomial",
-    "merkle-tree",
-    "post-quantum",
-    "algebra",
-    "tip5",
-]
+keywords = ["polynomial", "merkle-tree", "post-quantum", "algebra", "tip5"]
 categories = ["cryptography", "mathematics"]
 
 [dev-dependencies]
@@ -65,14 +59,6 @@ emojihash-rs = "0.2"
 get-size = { version = "^0.1", features = ["derive"] }
 unroll = "0.1"
 keccak = "0.1.3"
-
-[[bench]]
-name = "rescue_prime_regular"
-harness = false
-
-[[bench]]
-name = "rescue_prime_optimized"
-harness = false
 
 [[bench]]
 name = "tip5"
