--- a/bfieldcodec_derive/Cargo.toml
+++ b/bfieldcodec_derive/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = "1.0"
+syn = { version = "2", features = ["full", "derive"]}
 quote = "1.0"
 
 [lib]
