--- a/bfieldcodec_derive/Cargo.toml
+++ b/bfieldcodec_derive/Cargo.toml
@@ -2,6 +2,8 @@
 name = "bfieldcodec_derive"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-2.0"
+description = "Derive macro for BFieldCodec."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
