--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -29,7 +29,8 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 [dependencies]
 anyhow = "1.0"
 bincode = "1.3"
-bfieldcodec_derive = "0.2.0"
+# bfieldcodec_derive = "0.2.0"
+bfieldcodec_derive = { path = "../bfieldcodec_derive" }
 blake3 = "1.3.3"
 byteorder = "1.4"
 console = "0.15"
