add benchmark for the encoded size of a Merkle tree's auth structure

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -84,3 +84,7 @@ harness = false
 [[bench]]
 name = "merkle_tree_authenticate"
 harness = false
+
+[[bench]]
+name = "merkle_tree_auth_structure_size"
+harness = false
