--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "twenty-first"
-version = "0.30.0"
+version = "0.31.0"
 authors = ["Triton Software AG"]
 edition = "2021"
 
@@ -29,8 +29,7 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 [dependencies]
 anyhow = "1.0"
 bincode = "1.3"
-bfieldcodec_derive = { path = "../bfieldcodec_derive" }
-#bfieldcodec_derive = "0.3.0"
+bfieldcodec_derive = "0.4.0"
 blake3 = "1.3.3"
 colored = "2.0"
 hashbrown = "0.14"
