--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["cryptography", "mathematics"]
 
 [dev-dependencies]
 proptest = "1.3"
+proptest-arbitrary-interop = "0.1"
 
 [dev-dependencies.criterion]
 version = "0.5"
@@ -28,6 +29,7 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 
 [dependencies]
 anyhow = "1.0"
+arbitrary = { version = "1", features = ["derive"] }
 bincode = "1.3"
 bfieldcodec_derive = "0.4.2"
 blake3 = "1.5.0"
