--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -17,6 +17,7 @@ categories = ["cryptography", "mathematics"]
 [dev-dependencies]
 proptest = "1.3"
 proptest-arbitrary-interop = "0.1"
+test-strategy = "0.3"
 
 [dev-dependencies.criterion]
 version = "0.5"
